--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<h1>Erik E foda</h1>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+
+    <meta charset='utf-8'>
+
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+
+    <title>Page Title</title>
+
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+
+    <script src='main.js'></script>
+
+</head>
+
+<body>
+
+    <div class="me">
+
+        <h1>Página Test</h1>
+
+       <div class="tes">
+
+        ...
+
+       </div>
+
+    </div>
+
+</body>
+
+</html>
