--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="s/desktop/D1/img/apple-touch-icon.png">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="s/desktop/D1/img/favicon-32x32.png">
 
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="s/desktop/D1/img/favicon-16x16.png">
 
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="s/desktop/D1/img/site.webmanifest">
     <script src='main.js'></script>
 
 </head>
