--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='s/desktop/D1/css/main.css'>
     <link rel="apple-touch-icon" sizes="180x180" href="s/desktop/D1/img/apple-touch-icon.png">
 
     <link rel="icon" type="image/png" sizes="32x32" href="s/desktop/D1/img/favicon-32x32.png">
