--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
   <title></title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style >
+li{
+      list-style: none;
+    }
+    *{
+      margin: 0;
+      padding: 0;
+    }
     .icon span{
       font-family: 'Material Icons';
       font-size: 2rem;
@@ -587,3 +594,4 @@
 </script>
 <script src="/assets/a624238.js"></script>
 </html>
+
