--- a/index.html
+++ b/index.html
@@ -591,6 +591,7 @@ li{
    M1.style.left= M1_ ? '0%' : '-100%';
    console.log(S1.classList.toggle('ac'));//= M1_ ? '0%' : '-100%';
  }
+console.log(window.location)
 </script>
 <script src="/assets/a624238.js"></script>
 </html>
