--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <meta itemprop="name" content="share Leaving Flow Legendary"><!--via script-->
   <meta itemprop="image" content="/assets/logo.png">
   <meta name="description" itemprop="description" content="Leaving Flow Legendary,LFL"><!--via script-->
-  <link rel="icon" href="https://sitel.pages.dev/assets/favicon_32.png" sizes="32x32">
-    <link rel="icon" href="https://sitel.pages.dev/assets/favicon_48.png" sizes="48x48">
-    <link rel="icon" href="https://sitel.pages.dev/assets/favicon_96.png" sizes="96x96">
-    <link rel="icon" href="https://sitel.pages.dev/assets/favicon_144.png" sizes="144x144">
+    <link rel="icon" href="https://sitel.pages.dev/assets/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" href="https://sitel.pages.dev/assets/favicon-48x48.png" sizes="48x48">
+    <link rel="icon" href="https://sitel.pages.dev/assets/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" href="https://sitel.pages.dev/assets/favicon-144x144.png" sizes="144x144">
     <link media="only screen and(max-width: 640px)" href="/m/" rel="alternate"/>
   <meta name="robots" content="index,follow">
   <meta name="googlebot" content="index,follow">
