--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ display: none;
             <div class="mob-logo-sidebar-wrap">
               <div class="logo-wrap">
                 <a href="/" class="null">
-                  <img alt="logo" src="https://sitel.pages.dev/assets/favicon_144.png" class="big"></div>
+                  <img alt="logo" src="/assets/logo.png" class="big"></div>
                 </a>
                 <div class="Logy7654 ">
                   <button class="ui-button button-normal s-conic">
