--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head lang="en"> 
-  <base href="/"><!-- https://sterkgame.com -->
+  <base href="/SiteL/"><!-- https://sterkgame.com -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
