--- a/index.html
+++ b/index.html
@@ -2,23 +2,17 @@
 <html>
 <head>
   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-  <!--https://youtube.com/playlist?list=https://youtube.com/playlist?list=-->
-  <!---iframe allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  src="https://www.youtube.com/embed/Yno0DudsUwA?enablejsapi=1&origin=http%3A%2F%2Flocalhost%3A5502&widgetid=1&autoplay=7" allow="autoplay"></iframe-->
-  <base href="https://eriklicom.github.io/SiteL/">
-  <title>Consumindo API com AXIOS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>ETLEVI</title>
   <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
   <script src="main.js"></script>
   <meta name="preconect" href="https://youtube.com">
-  <link rel="stylesheet" href="_/main/css/www-main-desktop.css"/>
+  <link rel="stylesheet" href="_main/css/www-main-desktop.css"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 </head>
 <body size="smooth" >
-
-
   <div class="sptanb">
     <div class="items">
       <div class="selection sptanb_navigate_btns" title="home">
