--- a/404.html
+++ b/404.html
@@ -664,7 +664,7 @@ backdrop-filter: blur(10px);
 <script >
 //var PATH="/channel/k4-6NPkSyi2oSSLP28Csgh".split("/")
 
-var PATH=location.pathname.split("/")
+var PATH=location.pathname.replace("SiteL/").split("/")
 var ont=[
 {
 "kind": "youtube#playlistItem",
