--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Page Title</title>
     <link rel="icon" type="image/png" sizes="16x16" href="https://static.twitchcdn.net/assets/favicon-16-52e571ffea063af7a7f4.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://static.twitchcdn.net/assets/favicon-32-e29e246c157142c94346.png">
+    <link rel="alternate" media="only screen and(max-width: 640px)" href="https://m.twitch.tv"/>
+    <link rel="canonical" href="http://www.example.com/page-1" />
   </head>
 
 </html>
