--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
         <nav ></nav>
         <main class="content-page" role=meta>
           <div class="video-content-viwer">
-            
+            <div class="content_video-E-info">
+              <video controls=""></video>
+              <div class="video-content-info">
+                <div class="img-tamb">
+                  <img src="https://i.ytimg.com/vi/cmrKfVbMtd0/hq720.jpg" alt="">
+                </div>
+              </div>
+            </div>
           </div>
         </main>
       </div>
