--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
         bottom: 0;
         font-weight: 600;
       }
+      .format-ift{
+        color:#888;z-index: 5;
+        position:absolute;
+        padding: 20px;
+        bottom: 0;
+        left:0;
+      }
+      
     </style>
   </head>
   <body>
@@ -85,6 +93,7 @@
                   <span class="ift-3838">•</span>
                   <span class="ift-3838">há 1 hora</span>
                </div>
+               <a href="/">Assistir</a>
               </div>
             </div>
           </div>
