--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
         bottom: 0;
         left:0;
       }
+      .video-content-btn-link{
+        color:#fff;z-index: 5;
+        position:absolute;
+        padding: 20px;
+        bottom: 20px;
+        right: 20px;
+        width:100px;
+        text-decoration:none;
+        border: 2px solid #fff;
+        border-radius:50%;
+      }
       
     </style>
   </head>
@@ -93,7 +104,7 @@
                   <span class="ift-3838">•</span>
                   <span class="ift-3838">há 1 hora</span>
                </div>
-               <a href="/">Assistir</a>
+               <a class="video-content-btn-link" href="/">Assistir</a>
               </div>
             </div>
           </div>
