--- a/index.html
+++ b/index.html
@@ -59,26 +59,31 @@
         color:#fff;z-index: 5;
         position:absolute;
         padding:  50px 20px;
-        bottom: 0;
+        bottom: 40px;
         font-weight: 600;
       }
       .format-ift{
         color:#888;z-index: 5;
         position:absolute;
         padding: 20px;
-        bottom: 0;
+        bottom: 40px;
         left:0;
+        font-size: 14px;
       }
       .video-content-btn-link{
+        font-size: 12px;
         color:#fff;z-index: 5;
         position:absolute;
-        padding: 20px;
+        padding: 4px 16px;
         bottom: 20px;
-        right: 20px;
-        width:100px;
+        left:20px;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        width:;
         text-decoration:none;
         border: 2px solid #fff;
-        border-radius:50%;
+        border-radius:99999px;
       }
       
     </style>
@@ -106,6 +111,17 @@
                </div>
                <a class="video-content-btn-link" href="/">Assistir</a>
               </div>
+            </div>
+          </div>
+          <div class="games-content">
+            <div class="games-content-card">
+              <a href="/">
+                <div class="giJ">
+                  <div class="games-content-card-img">
+                    <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
         </main>
