--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
                   <div class="games-content-card-img">
                     <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
                   </div>
+                  <h3>Minecraft</h3>
+                  <p class="g-ye">1k videos post / hr</p>
                 </div>
               </a>
             </div>
