--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
                   </div>
                   <h3>Minecraft</h3>
-                  <p class="g-ye">1k videos post / hr</p>
+                  <p class="g-ye">1k videos / 183 lives</p>
                 </div>
               </a>
             </div>
