--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
         bottom: 40px;
         font-weight: 600;
       }
-      .format-ift{
-        color:#888;z-index: 5;
+      .ift-3838{
+        
+        color:#888;
+      }
+      .format-ift{z-index: 5;
         position:absolute;
         padding: 20px;
         bottom: 40px;
@@ -121,7 +124,11 @@
                     <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
                   </div>
                   <h3>Minecraft</h3>
-                  <p class="g-ye">1k videos / 183 lives</p>
+                  <div class="format-ibt">
+                    <span class="ift-3838">1k video</span>
+                    <span class="ift-3838">•</span>
+                    <span class="ift-3838">741 ao vivos</span>
+                 </div>
                 </div>
               </a>
             </div>
