--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
         font-weight: 600;
       }
       .ift-3838{
-        
         color:#888;
       }
       .format-ift{z-index: 5;
@@ -88,7 +87,20 @@
         border: 2px solid #fff;
         border-radius:99999px;
       }
-      
+      a{
+        text-decoration:none;
+      }
+      .games-content-card{
+        width:200px;
+        position:relative;
+      }
+      .games-content-card-img img{
+        width:100%;
+      }
+      .gv6{
+        position:relative;
+        padding: 10px;
+      }
     </style>
   </head>
   <body>
@@ -119,7 +131,7 @@
           <div class="games-content">
             <div class="games-content-card">
               <a href="/">
-                <div class="giJ">
+                <div class="gv6">
                   <div class="games-content-card-img">
                     <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
                   </div>
