--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         text-decoration:none;
       }
       .games-content-card{
-        width:200px;
+        width:150px;
         position:relative;
       }
       .games-content-card-img img{
@@ -100,6 +100,19 @@
       .gv6{
         position:relative;
         padding: 10px;
+        font-size:10px;
+      }
+      .tsh{
+        font-size: 16px;
+        margin:5px 1px;
+        color: #000;
+        font-weight:600;
+      }
+      .games-content{
+        display:flex;
+        flex-wrap: nowrap;
+        overflow-x:  scroll;
+        width:100%;
       }
     </style>
   </head>
@@ -135,7 +148,82 @@
                   <div class="games-content-card-img">
                     <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
                   </div>
-                  <h3>Minecraft</h3>
+                  <h3 class="tsh">Minecraft</h3>
+                  <div class="format-ibt">
+                    <span class="ift-3838">1k video</span>
+                    <span class="ift-3838">•</span>
+                    <span class="ift-3838">741 ao vivos</span>
+                 </div>
+                </div>
+              </a>
+            </div>
+            <div class="games-content-card">
+              <a href="/">
+                <div class="gv6">
+                  <div class="games-content-card-img">
+                    <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
+                  </div>
+                  <h3 class="tsh">Minecraft</h3>
+                  <div class="format-ibt">
+                    <span class="ift-3838">1k video</span>
+                    <span class="ift-3838">•</span>
+                    <span class="ift-3838">741 ao vivos</span>
+                 </div>
+                </div>
+              </a>
+            </div>
+            <div class="games-content-card">
+              <a href="/">
+                <div class="gv6">
+                  <div class="games-content-card-img">
+                    <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
+                  </div>
+                  <h3 class="tsh">Minecraft</h3>
+                  <div class="format-ibt">
+                    <span class="ift-3838">1k video</span>
+                    <span class="ift-3838">•</span>
+                    <span class="ift-3838">741 ao vivos</span>
+                 </div>
+                </div>
+              </a>
+            </div>
+            <div class="games-content-card">
+              <a href="/">
+                <div class="gv6">
+                  <div class="games-content-card-img">
+                    <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
+                  </div>
+                  <h3 class="tsh">Minecraft</h3>
+                  <div class="format-ibt">
+                    <span class="ift-3838">1k video</span>
+                    <span class="ift-3838">•</span>
+                    <span class="ift-3838">741 ao vivos</span>
+                 </div>
+                </div>
+              </a>
+            </div>
+            <div class="games-content-card">
+              <a href="/">
+                <div class="gv6">
+                  <div class="games-content-card-img">
+                    <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
+                  </div>
+                  <h3 class="tsh">Minecraft</h3>
+                  <div class="format-ibt">
+                    <span class="ift-3838">1k video</span>
+                    <span class="ift-3838">•</span>
+                    <span class="ift-3838">741 ao vivos</span>
+                 </div>
+                </div>
+              </a>
+            </div>
+            <div class="games-content-card">
+              <a href="/">
+                <div class="gv6">
+                  <div class="games-content-card-img">
+                    <img src="https://yt3.googleusercontent.com/4rjv-pIrVwLVbPF1pd5XNlqFCn37bWry9dInCIusOoGES7npu8H3NMgY5Z24PsppJOjGfn9jhA">
+                  </div>
+                  <h3 class="tsh">Minecraft</h3>
                   <div class="format-ibt">
                     <span class="ift-3838">1k video</span>
                     <span class="ift-3838">•</span>
