--- a/index.html
+++ b/index.html
@@ -90,9 +90,15 @@
       a{
         text-decoration:none;
       }
+      .games-content-card:hover .gv6{
+        transform: translate(-50%,-59%);
+      }
       .games-content-card{
         width:150px;
         position:relative;
+        min-width:150px;
+        border: 1px solid #222;
+        
       }
       .games-content-card-img img{
         width:100%;
