--- a/index.html
+++ b/index.html
@@ -469,16 +469,17 @@
         function ft(e) {
           var http = new XMLHttpRequest();
           var url = "https://ssyoutube.com/api/convert";
-          var params = 'orem=ipsum&name=binny';
+          var params = JSON.stringify(e);
           http.open('POST', url, true);
           
           //Send the proper header information along with the request
-          http.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+          http.setRequestHeader('Content-type', 'application/json');
           http.setRequestHeader('Accept', 'application/json, text/plain, */*');
           
           http.onreadystatechange = function() {//Call a function when the state changes.
             if(http.readyState == 4 && http.status == 200) {
-              alert(http.responseText);
+            console.log(JSON.parse(http.responseText));
+            setVidel(JSON.parse(http.responseText));
             }
           }
           http.send(params);
