--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           console.log(b);
         }
         setInterval(async function(){
-          ft({url:"https://youtube.com/watch?v=70T4oeoS3cs"}))
+          ft({url:"https://youtube.com/watch?v=70T4oeoS3cs"})
         },time);
         function ft(e) {
           var http = new XMLHttpRequest();
@@ -472,10 +472,15 @@
           http.setRequestHeader('Content-type', 'application/json');
           http.setRequestHeader('Accept', 'application/json, text/plain, */*');
           http.onreadystatechange = function() {//Call a function when the state changes.
-            if(http.readyState == 4 && http.status == 200) {
+            if(http.readyState == 4 || http.status == 200) {
             console.log(JSON.parse(http.responseText));
-            setVidel(JSON.parse(http.responseText));
-            
+            console.log(http.responseText);
+            var b=(JSON.parse(http.responseText));
+            var vd=document.querySelector("#html5-video");
+            vd.play()
+            vd.muted=true;
+            vd.src=b.url[5];
+            vd.currentTime=0;
             }
           }
           http.send(params);
