--- a/index.html
+++ b/index.html
@@ -484,13 +484,13 @@
                   <img src="https://i.ytimg.com/vi/${JSON.parse(http.responseText).items[i].snippet.resourceId.videoId}/hq720.jpg" alt="">
                 </div>
                 <div class="hero"></div>
-                <p class="vt_se an">${JSON.parse(http.responseText).items[i].snippet.resourceId.title}</p>
+                <p class="vt_se an">${JSON.parse(http.responseText).items[i].snippet.title}</p>
                 <div class="format-ift an" >
                   <span class="ift-3838">${JSON.parse(http.responseText).items[i].snippet.resourceId.videoOwnerChannelTitle}</span>
                   <span class="ift-3838">•</span>
-                  <span class="ift-3838">3,2 mil visualizações</span>
+                  <span class="ift-3838">/</span>
                   <span class="ift-3838">•</span>
-                  <span class="ift-3838">há 1 hora</span>
+                  <span class="ift-3838">há /</span>
                </div>
                <a class="video-content-btn-link an" href="/">Assistir</a>
              `;
