--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       .dv_ {
         position: absolute;
         z-index: 9;
-        bottom:10px;left: 10px;
+        bottom:10px;right:10px;width:100px;
       }
       .dv_ span.action{
         background: #fff;
@@ -481,6 +481,7 @@
             setInterval(async function(){
               i++; 
               var yd=document.querySelector(".video-content-info");
+              var dj=document.querySelector(".video-content-info");
               yd.innerHTML=`<div class="img-thumbnail">
                   <img src="https://i.ytimg.com/vi/${JSON.parse(http.responseText).items[i].snippet.resourceId.videoId}/hq720.jpg" alt="">
                 </div>
@@ -493,8 +494,14 @@
                   <span class="ift-3838">•</span>
                   <span class="ift-3838">há /</span>
                </div>
-               <a class="video-content-btn-link an" href="/watch?q=${JSON.parse(http.responseText).items[i].snippet.resourceId.videoId}>Assistir</a>
+               <a class="video-content-btn-link an" href="/watch?q=${JSON.parse(http.responseText).items[i].snippet.resourceId.videoId}">Assistir</a>
              `;
+             dj.innerHTML=`
+             <span${i==0?'class="action"':''}>
+             <span${i==1?'class="action"':''}>
+             <span${i==2?'class="action"':''}>
+             <span${i==3?'class="action"':''}>
+             `
               ft({url:"https://youtube.com/watch?v="+JSON.parse(http.responseText).items[i].snippet.resourceId.videoId})
           },time);
             }
